# avr

./: README.md
generic/: Makefile
generic/src/: foo2.c  main.c  main.h  zfoo.c
makecmake.bak/: CMakeLists.tested.cmake  CMakeLists.txt  Makefile
pgm1/src/: main.c
pgm2/src/: main.c
pgm3/src/: main.c
pgm4/: Makefile
pgm4/src/: LCDmodule.h  main.c
pgm5/src/: main.c
pgm6/.dep/: PrintByte.o.d  main.o.d
pgm6/src/: LCDmodule.c  LCDmodule.h  main.c
pgm7/src/: main.c
pgm8/.dep/: LCDmodule.o.d
pgm8/src/: main.c
